--- a/index.html
+++ b/index.html
@@ -1879,10 +1879,10 @@
 
   <footer>
     Với tất cả yêu thương từ
-    <span class="names">Nhân &amp; Linh</span>
+    <span class="names">Minh Nghĩa &amp; Bảo Hân</span>
     gửi đến gia đình và bạn bè.
     <br>
-    With all our love, from Nhan &amp; Linh to our dear family and friends.
+    With all our love, from Minh Nghia &amp; Bao Han to our dear family and friends.
   </footer>
 
   <!-- SCRIPTS ------------------------------------------------->
