--- a/index.html
+++ b/index.html
@@ -1184,94 +1184,250 @@
     }
 
     /* MEDIA QUERIES ------------------------------------------- */
-    @media (min-width: 640px) {
-      #hero {
-        padding-bottom: 4.3rem;
-      }
+/* MOBILE: <= 639px  --------------------------------------- */
+@media (max-width: 639px) {
 
-      .hero-inner {
-        grid-template-columns: minmax(0, 1.15fr) minmax(0, 1fr);
-        align-items: stretch;
-      }
+section {
+  padding: 2.5rem 1.1rem;
+}
 
-      .hero-visual {
-        min-height: 280px;
-      }
+.container {
+  max-width: 100%;
+}
 
-      .hero-content {
-        padding: 1.8rem 1.5rem;
-      }
+/* Hero */
+#hero {
+  padding-top: 3.2rem;
+  padding-bottom: 3rem;
+}
 
-      .hero-names {
-        font-size: 2.8rem;
-      }
+.hero-inner {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
 
-      .hero-date-block {
-        margin-bottom: 1.3rem;
-      }
+.hero-visual {
+  min-height: 260px;
+  border-radius: 20px;
+}
 
-      .ticket-rows {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-      }
+.hero-content {
+  padding: 1.4rem 1.2rem 1.3rem;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.86);
+  box-shadow: 0 10px 26px rgba(0, 0, 0, 0.05);
+}
 
-      .journey-grid {
-        grid-template-columns: 1.1fr 1fr;
-        align-items: flex-start;
-      }
+.hero-line {
+  font-size: 0.86rem;
+}
 
-      .gallery-grid {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-      }
+.hero-names {
+  font-size: 2.15rem;
+}
 
-      .countdown-grid {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-      }
-    }
+.hero-date-block {
+  width: 100%;
+  text-align: center;
+}
 
-    @media (min-width: 768px) {
-      .nav-links {
-        display: flex;
-      }
+.hero-cta-row {
+  flex-direction: column;
+  align-items: stretch;
+}
 
-      .hamburger,
-      .nav-links-mobile {
-        display: none;
-      }
+.hero-cta-row .btn-primary,
+.hero-cta-row .btn-secondary-link {
+  justify-content: center;
+}
 
-      nav {
-        font-size: 0.86rem;
-      }
+/* Boarding card */
+.boarding-card {
+  grid-template-columns: 1fr;
+  border-radius: 20px;
+}
 
-      .boarding-card::before {
-        width: 110px;
-        left: 64%;
-      }
+.ticket-main,
+.ticket-stub {
+  padding: 1.2rem 1.2rem;
+}
 
-      .location-card {
-        grid-template-columns: 2fr 1fr;
-        align-items: center;
-      }
-    }
+.ticket-stub {
+  border-left: none;
+  border-top: 1px dashed rgba(199, 146, 127, 0.3);
+}
 
-    @media (min-width: 900px) {
-      #hero {
-        padding-top: 4rem;
-        padding-bottom: 4.6rem;
-      }
+.ticket-rows {
+  grid-template-columns: 1fr 1fr;
+  gap: 0.9rem 1rem;
+}
 
-      .hero-visual {
-        min-height: 340px;
-      }
+.airport-row {
+  margin-top: 1.1rem;
+}
 
-      .boarding-card {
-        grid-template-columns: 2fr 1.1fr;
-      }
+.airport-code {
+  font-size: 1.05rem;
+}
 
-      .music-player {
-        right: 2rem;
-        bottom: 2rem;
-      }
-    }
+/* Flight board */
+.flight-board-body {
+  padding: 0.9rem 0.7rem 1.1rem;
+}
+
+.flight-board-table th,
+.flight-board-table td {
+  padding: 0.5rem 0.3rem;
+}
+
+.flight-meta {
+  font-size: 0.82rem;
+}
+
+/* RSVP & Location */
+.rsvp-card,
+.location-card {
+  padding: 1.35rem 1.2rem 1.5rem;
+}
+
+.location-card {
+  grid-template-columns: 1fr;
+}
+
+/* Gallery */
+.gallery-grid {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.gallery-caption {
+  font-size: 0.68rem;
+}
+
+/* Countdown */
+.countdown-grid {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+/* Music player mobile: gọn hơn */
+.music-player {
+  left: 0.75rem;
+  right: 0.75rem;
+  bottom: 0.75rem;
+  border-radius: 18px;
+  padding-inline: 0.6rem;
+}
+
+.music-label strong {
+  font-size: 0.76rem;
+}
+
+/* Ẩn dòng mô tả dài trên mobile để đỡ chật */
+.music-label span {
+  display: none;
+}
+}
+
+/* TABLET: >= 640px ---------------------------------------- */
+@media (min-width: 640px) {
+
+#hero {
+  padding-bottom: 4.3rem;
+}
+
+.hero-inner {
+  grid-template-columns: minmax(0, 1.15fr) minmax(0, 1fr);
+  align-items: stretch;
+}
+
+.hero-visual {
+  min-height: 280px;
+}
+
+.hero-content {
+  padding: 1.8rem 1.5rem;
+}
+
+.hero-names {
+  font-size: 2.6rem;
+}
+
+.hero-date-block {
+  margin-bottom: 1.3rem;
+}
+
+.ticket-rows {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.gallery-grid {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.countdown-grid {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+}
+
+/* TABLET NGANG / SMALL LAPTOP: >= 768px ------------------- */
+@media (min-width: 768px) {
+
+.nav-links {
+  display: flex;
+}
+
+.hamburger,
+.nav-links-mobile {
+  display: none;
+}
+
+nav {
+  font-size: 0.86rem;
+}
+
+.boarding-card::before {
+  width: 110px;
+  left: 64%;
+}
+
+.location-card {
+  grid-template-columns: 2fr 1fr;
+  align-items: center;
+}
+
+/* Journey block nếu anh dùng */
+.journey-wrapper {
+  grid-template-columns: minmax(0, 1.2fr) minmax(0, 1fr);
+  align-items: flex-start;
+  padding: 2.1rem 2rem 2.2rem;
+}
+}
+
+/* DESKTOP / LARGE LAPTOP: >= 900px ------------------------ */
+@media (min-width: 900px) {
+
+#hero {
+  padding-top: 4rem;
+  padding-bottom: 4.6rem;
+}
+
+.hero-visual {
+  min-height: 340px;
+}
+
+.hero-names {
+  font-size: 3rem;
+}
+
+.boarding-card {
+  grid-template-columns: 2fr 1.1fr;
+}
+
+.music-player {
+  right: 2rem;
+  bottom: 2rem;
+}
+}
   </style>
 </head>
 <body>
