--- a/wedding-detail.html
+++ b/wedding-detail.html
@@ -261,7 +261,7 @@
       position: relative;
       border-radius: var(--radius-large);
       overflow: hidden;
-      background-image: url('https://scontent.fhan5-9.fna.fbcdn.net/v/t39.30808-6/584328818_2455227938212267_5374874912422951964_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=NQkMmqBJSP0Q7kNvwGltT05&_nc_oc=AdnVV4wrvgzEGyP1b3GGbDXQuDkXrm0q9F43FCM9f69w0d-FiyI8Zb6br16oSE1rFCLci702P3jxjgAqlaBZLay2&_nc_zt=23&_nc_ht=scontent.fhan5-9.fna&_nc_gid=5cMo8ogX32PRXKgyPMurHQ&oh=00_Afhzj3gx6VdnCCG-G57f4j_ZhVe-iQCq1PsBNgwjcHmoag&oe=692231BA');
+      background-image: url('/Image.jfif');
       background-size: cover;
       background-position: center;
       min-height: 220px;
